WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276423
[WPE] WPE Platform: fix handling of view to send touch events under wayland
https://bugs.webkit.org/show_bug.cgi?id=276423
Summary
[WPE] WPE Platform: fix handling of view to send touch events under wayland
Carlos Garcia Campos
Reported
2024-07-10 04:34:48 PDT
Touch events are only sent to the right WPEView if the current toplevel has the keyboard focus. We need to track the toplevel currently under touch the same way we do for pointer and keyboard events.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2024-07-10 04:37:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30647
EWS
Comment 2
2024-07-10 04:52:31 PDT
Committed
280814@main
(2931ba164f1c): <
https://commits.webkit.org/280814@main
> Reviewed commits have been landed. Closing PR #30647 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug