[WPE] WPE Platform: fix handling of view to send touch events under wayland https://bugs.webkit.org/show_bug.cgi?id=276423

Reviewed by Alejandro G. Castro.

Touch events are only sent to the right WPEView if the current toplevel
has the keyboard focus. We need to track the toplevel currently under
touch the same way we do for pointer and keyboard events.

* Source/WebKit/WPEPlatform/wpe/wayland/WPEToplevelWayland.cpp:
(wpeToplevelWaylandSetIsUnderTouch):
(wpeToplevelWaylandGetVisibleViewUnderTouch):
* Source/WebKit/WPEPlatform/wpe/wayland/WPEToplevelWaylandPrivate.h:
* Source/WebKit/WPEPlatform/wpe/wayland/WPEWaylandSeat.cpp:

Canonical link: https://commits.webkit.org/280814@main